# recs

./: .coveragerc  .gitignore  AGENTS.md  README.md  README.rst  TASKS.md  TODO.md  all_test.py  device.json  pyproject.toml  rec_unlimited.py  recs.py  setup.py  tasks.md  test.sh  test_hash_cmp.py
demos/: dearpygui_waveform.py  pyside6_waveform.py  waveform_source.py
doc/: command-line.md  device-lifecycle-plan.md  features.md  master-plan.md  non-terminal-gui-plan.md  quality.md  session-plan.md
experimental/: rec_unlimited.py
recs/: __init__.py  __main__.py  audio_callback.py  audio_display.py  audio_types.py  block.py  cfg.py  channel_listener.py  check.py  checker.py  cli.py  config.py  counter.py  device.py  file_writer.py  monitor.py  mux.py  recs.py  silence.py  table.py  threads.py  types.py
recs/audio/: auto_slice.py  block.py  callback.py  channel_writer.py  device.py  file_creator.py  file_format.py  file_opener.py  file_types.py  file_types_conversion.py  file_writer.py  format.py  hash_cmp.py  header_size.py  info.py  legal_filename.py  metadata.py  monitor.py  mux.py  prefix_dict.py  recording_path.py  recs.py  silence.py  slicer.py  subtype.py  times.py  track.py  valid_subtypes.py
recs/base/: __init__.py  _query_device.py  aliases.py  cfg.py  cfg_raw.py  cli.py  message.py  metadata.py  prefix_dict.py  pyproject.py  run.py  signals.py  state.py  times.py  to_time.py  type_conversions.py  types.py
recs/cfg/: __init__.py  aliases.py  app.py  cfg.py  cli.py  device.py  file_source.py  hash_cmp.py  metadata.py  path_pattern.py  run.py  run_cli.py  source.py  time_settings.py  track.py
recs/cli/: __init__.py  app.py  info.py  rec.py
recs/misc/: __init__.py  aliases.py  contexts.py  counter.py  file_list.py  legal_filename.py  log.py  recording_path.py  times.py  to_time.py
recs/ui/: aliases.py  audio_display.py  channel_recorder.py  counter.py  dear_gui.py  device_names.py  device_poller.py  device_process.py  device_proxy.py  device_recorder.py  device_state.py  device_tracks.py  exc_inc.py  exclude_include.py  full_state.py  gui_child.py  gui_process.py  key_events.py  legal_filename.py  live.py  presentation.py  pyside_gui.py  recorder.py  session.py  session_manifest.py  source_process.py  source_recorder.py  source_tracks.py  splitter.py  state.py  table.py  total_state.py  track.py
recs/util/: slicer.py  threads.py  types.py
test/: conftest.py  devices.json  late_load_subprocess.py  millions.py  mock_data.py  mock_input_stream.py  one-two-three.flac  recs_runner.py  run_streams.py  test_aliases.py  test_auto_slice.py  test_block.py  test_cfg.py  test_channel_writer.py  test_cleanup.py  test_counter.py  test_device.py  test_device_tracks.py  test_end_to_end.py  test_enums.py  test_exc_inc.py  test_exclude_include.py  test_fields.py  test_file_list.py  test_file_writer.py  test_format_subtype.py  test_hash_cmp.py  test_header_size.py  test_input_device.py  test_integration_regression.py  test_legal_filename.py  test_long_files.py  test_message.py  test_metadata.py  test_mux.py  test_path_pattern.py  test_prefix_dict.py  test_recorder.py  test_recording_path.py  test_recs.py  (+4 more)
test/audio/: test_block.py  test_channel_writer.py  test_header_size.py  test_long_files.py
test/base/: test_enums.py  test_prefix_dict.py
test/cfg/: test_aliases.py  test_cfg.py  test_cli.py  test_device.py  test_fields.py  test_hash_cmp.py  test_metadata.py  test_path_pattern.py  test_recs.py  test_times.py  test_track.py
test/misc/: test_file_list.py
test/test_end_to_end/: file_inputs_manifest.yml
test/testdata/end_to_end/: Ext + 1-2 + 20231015-164921.flac  Ext + 3 + 20231015-164921.flac
test/testdata/end_to_end/default/: Ext + 3 + 20231015-164921.flac  Flower 8 + 3-4 + 20231015-164921.flac  Flower 8 + 5-6 + 20231015-164921.flac  Flower 8 + 7-8 + 20231015-164921.flac  Mic + 1 + 20231015-164921.flac
test/testdata/end_to_end/simple/: Ext + 1-2 + 20231015-164921.flac  Ext + 3 + 20231015-164921.flac  Flower 8 + 1-2 + 20231015-164921.flac  Flower 8 + 3-4 + 20231015-164921.flac  Flower 8 + 5-6 + 20231015-164921.flac  Flower 8 + 7-8 + 20231015-164921.flac  Flower 8 + 9-10 + 20231015-164921.flac  Mic + 1 + 20231015-164921.flac
test/testdata/end_to_end/single/: Flower 8 + 1-2 + 20231015-164921.flac  Flower 8 + 3-4 + 20231015-164921.flac  Flower 8 + 5-6 + 20231015-164921.flac  Flower 8 + 7-8 + 20231015-164921.flac  Flower 8 + 9-10 + 20231015-164921.flac
test/testdata/integration/inputs/: SOURCE.md
test/ui/: test_dear_gui.py  test_device_poller.py  test_device_tracks.py  test_full_state.py  test_gui_process.py  test_live.py  test_presentation.py  test_pyside_gui.py  test_recorder.py  test_source_process.py
(+16 files in other folders)
