[project]
name = "recs"
version = "0.3.1"
description = "🎙 recs: the Universal Recorder 🎙"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dtyper",
    "numpy",
    "pyaudio",
    "rich",
    "sounddevice",
    "soundfile",
    "threa>=1.9.0",
    "typer",
    "impall",
    "overrides",
    "coverage",
    "strenum",
    "humanfriendly",
    "tomli",
]

[project.scripts]
recs = "recs.base.cli:run"

[dependency-groups]
dev = [
    "coverage>=7.4.1",
    "pytest",
    "pyupgrade>=3.21.2",
    "ruff",
    "tdir",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"

[tool.coverage.run]
branch = true
source = ["recs"]
omit = [
    "recs/__main__.py",
    "recs/cfg/cli.py",
    "recs/cfg/app.py",
]

[tool.coverage.report]
fail_under = 91
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"
