[project]
name = "recs"
version = "0.11.0"
description = "🎙 The Universal Recorder 🎙"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]
dependencies = [
    "dtyper",
    "numpy",
    "pyaudio",
    "rich",
    "sounddevice",
    "soundfile",
    "threa>=1.9.0",
    "typer",
    "impall",
    "overrides",
    "coverage",
    "strenum",
    "humanfriendly",
    "tomli",
]

[project.scripts]
recs = "recs.base.cli:run"

[dependency-groups]
dev = [
    "coverage>=7.4.1",
    "pytest",
    "pyupgrade>=3.21.2",
    "ruff",
    "tdir",
    "ty>=0.0.14",
]

[tool.coverage.run]
branch = true
source = ["recs"]
omit = [
    "recs/__main__.py",
    "recs/cfg/cli.py",
    "recs/cfg/app.py",
]

[tool.coverage.report]
fail_under = 91
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

[tool.poetry]
name = "recs"
version = "0.1.0"
description = "🎙 The Universal Recorder 🎙"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
